--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Country Information - World Regions</title>
 </head>
+
 <body>
+<p>Ga naar de <a href="countryPartTwo.html">country pagina</a></p>
+<img src="./assets/world_map.png" alt="world map">
+<div class="content-frame">
+    <ul class="content"id="allCountries"></ul>
+    </div>
+<p id="error" class="error-message"></p>
+<script type="module" src="app.js"></script>
 
 </body>
 </html>
